[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/gui/progressbar_fill.png" type="Texture" id=1]
[ext_resource path="res://fonts/SofiaSansCondensed-VariableFont_wght.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/tela deck/Stats.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 18
outline_size = 1
use_filter = true
font_data = ExtResource( 2 )

[node name="Stats" type="Control"]
anchor_right = 0.077
anchor_bottom = 0.321
margin_right = 0.159988
margin_bottom = 0.319977
script = ExtResource( 3 )

[node name="LabelTitulo" type="Label" parent="."]
margin_left = 5.0
margin_top = 341.0
margin_right = 135.0
margin_bottom = 371.0
custom_fonts/font = SubResource( 1 )
text = "Curva de NÃ­vel"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 16.0
margin_top = 315.0
margin_right = 34.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="Label1" type="Label" parent="."]
margin_left = 48.0
margin_top = 315.0
margin_right = 66.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
text = "1"
align = 1

[node name="Label2" type="Label" parent="."]
margin_left = 78.0
margin_top = 315.0
margin_right = 96.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
text = "2"
align = 1

[node name="Label3" type="Label" parent="."]
margin_left = 107.0
margin_top = 315.0
margin_right = 129.0
margin_bottom = 345.0
custom_fonts/font = SubResource( 1 )
text = "3+"
align = 1

[node name="TextureProgress0" type="TextureProgress" parent="."]
margin_left = 3.01938
margin_top = 323.003
margin_right = 1083.02
margin_bottom = 471.003
rect_rotation = -90.0034
rect_scale = Vector2( 0.3, 0.3 )
step = 0.1
value = 40.0
texture_progress = ExtResource( 1 )

[node name="TextureProgress1" type="TextureProgress" parent="."]
margin_left = 35.0194
margin_top = 323.003
margin_right = 1115.02
margin_bottom = 471.003
rect_rotation = -90.0034
rect_scale = Vector2( 0.3, 0.3 )
step = 0.1
value = 100.0
texture_progress = ExtResource( 1 )

[node name="TextureProgress2" type="TextureProgress" parent="."]
margin_left = 65.0194
margin_top = 323.003
margin_right = 1145.02
margin_bottom = 471.003
rect_rotation = -90.0034
rect_scale = Vector2( 0.3, 0.3 )
step = 0.1
value = 50.0
texture_progress = ExtResource( 1 )

[node name="TextureProgress3" type="TextureProgress" parent="."]
margin_left = 95.0194
margin_top = 323.003
margin_right = 1175.02
margin_bottom = 471.003
rect_rotation = -90.0034
rect_scale = Vector2( 0.3, 0.3 )
page = 0.1
value = 1.0
texture_progress = ExtResource( 1 )

[node name="Quantidades" type="Control" parent="."]
margin_left = 4.0
margin_top = 277.0
margin_right = 135.0
margin_bottom = 317.0

[node name="N0" type="Label" parent="Quantidades"]
margin_left = 12.0
margin_top = 11.0
margin_right = 30.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="N1" type="Label" parent="Quantidades"]
margin_left = 44.0
margin_top = 11.0
margin_right = 62.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="N2" type="Label" parent="Quantidades"]
margin_left = 74.0
margin_top = 11.0
margin_right = 92.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1

[node name="N3" type="Label" parent="Quantidades"]
margin_left = 104.0
margin_top = 11.0
margin_right = 122.0
margin_bottom = 34.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
